{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 1,
  "lineage": "a1b2c3d4-e5f6-7890-abcd-ef1234567890",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0abcdef1234567890",
            "arn": "arn:aws:ec2:us-east-1:618300337335:instance/i-0e823b1b3a14d6a60",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e823b1b3a14d6a60",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "rightsize-demo-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0123456789abcdef0",
            "private_dns": "ip-10-0-1-156.ec2.internal",
            "private_ip": "10.0.1.156",
            "public_dns": "ec2-54-123-45-67.compute-1.amazonaws.com",
            "public_ip": "54.123.45.67",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:618300337335:key/12345678-1234-1234-1234-123456789012",
                "tags": {
                  "Name": "rightsize-demo-root-volume"
                },
                "tags_all": {
                  "Environment": "demo",
                  "ManagedBy": "terraform",
                  "Name": "rightsize-demo-root-volume",
                  "Project": "rightsize-example"
                },
                "throughput": 125,
                "volume_id": "vol-0123456789abcdef0",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0123456789abcdef0",
            "tags": {
              "CurrentMonthlyCost": "$80.00",
              "InstanceType": "t3.large",
              "Name": "rightsize-demo-instance",
              "PotentialSavings": "$48.00",
              "RecommendedActions": "Rightsize to t2.large, Upgrade to t3.large, Stop, MigrateToGraviton",
              "RightsizeRecommendation": "This instance has cost optimization recommendations",
              "TrustedAdvisorCheckId": "c1z7kmr00n"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "CurrentMonthlyCost": "$80.00",
              "Environment": "demo",
              "InstanceType": "t3.large",
              "ManagedBy": "terraform",
              "Name": "rightsize-demo-instance",
              "Owner": "cloudzero-demo",
              "PotentialSavings": "$48.00",
              "Project": "rightsize-example",
              "RecommendedActions": "Rightsize to t2.large, Upgrade to t3.large, Stop, MigrateToGraviton",
              "RightsizeRecommendation": "This instance has cost optimization recommendations",
              "TrustedAdvisorCheckId": "c1z7kmr00n"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a1b2c3d4e5f67890"
            ]
          },
          "dependencies": [
            "aws_key_pair.main",
            "aws_security_group.ec2_sg",
            "aws_subnet.public",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:618300337335:internet-gateway/igw-0123456789abcdef0",
            "id": "igw-0123456789abcdef0",
            "owner_id": "618300337335",
            "tags": {
              "Name": "rightsize-demo-igw"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "rightsize-demo-igw",
              "Owner": "cloudzero-demo",
              "Project": "rightsize-example"
            },
            "vpc_id": "vpc-0987654321fedcba0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:618300337335:route-table/rtb-0123456789abcdef0",
            "id": "rtb-0123456789abcdef0",
            "owner_id": "618300337335",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0123456789abcdef0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rightsize-demo-public-rt"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "rightsize-demo-public-rt",
              "Owner": "cloudzero-demo",
              "Project": "rightsize-example"
            },
            "timeouts": null,
            "vpc_id": "vpc-0987654321fedcba0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0123456789abcdef0",
            "route_table_id": "rtb-0123456789abcdef0",
            "subnet_id": "subnet-0123456789abcdef0"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:618300337335:security-group/sg-0a1b2c3d4e5f67890",
            "description": "Security group for EC2 instance - Rightsize example",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a1b2c3d4e5f67890",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "rightsize-demo-ec2-20230415143000123456789012",
            "name_prefix": "rightsize-demo-ec2-",
            "owner_id": "618300337335",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rightsize-demo-ec2-sg"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "rightsize-demo-ec2-sg",
              "Owner": "cloudzero-demo",
              "Project": "rightsize-example"
            },
            "timeouts": null,
            "vpc_id": "vpc-0987654321fedcba0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:618300337335:subnet/subnet-0123456789abcdef0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0123456789abcdef0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "618300337335",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rightsize-demo-public-subnet",
              "Type": "Public"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "rightsize-demo-public-subnet",
              "Owner": "cloudzero-demo",
              "Project": "rightsize-example",
              "Type": "Public"
            },
            "vpc_id": "vpc-0987654321fedcba0"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:618300337335:vpc/vpc-0987654321fedcba0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0123456789abcdef0",
            "default_route_table_id": "rtb-0987654321fedcba0",
            "default_security_group_id": "sg-0987654321fedcba0",
            "dhcp_options_id": "dopt-0123456789abcdef0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0987654321fedcba0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0987654321fedcba0",
            "owner_id": "618300337335",
            "tags": {
              "Name": "rightsize-demo-vpc"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "rightsize-demo-vpc",
              "Owner": "cloudzero-demo",
              "Project": "rightsize-example"
            }
          }
        }
      ]
    }
  ]
}